package(default_visibility = ["//visibility:public"])

licenses(["notice"])

filegroup(
    name = "credentials",
    testonly = 1,
    srcs = [
        "aws_credentials_cc.txt",
        "aws_key_arn.txt",
        "bad_aws_key_arn.txt",
        "bad_aws_credentials_cc.txt",
        "bad_credentials_aws.csv",
        "bad_gcp_credentials.json",
        "bad_gcp_key_name.txt",
        "gcp_key_name.txt",
        "credential.json",
        "credentials_aws.csv",
        "credentials_aws.cred",
        "README_AWS.txt",
],
)

filegroup(
    name = "ecies_keysets",
    testonly = 1,
    srcs = [
        # Generated with
        # tinkey create \
        # --key-template examples/keytemplates/ECIES_P256_HKDFHMACSHA256_AES128CTR_128BITIV_HMACSHA256_128BITTAG.ascii \
        # --out testdata/ecies_private_keyset2.bin --out-format BINARY
        "ecies_private_keyset.bin",

        # Generated with
        # tinkey create \
        # --key-template examples/keytemplates/ECIES_P256_HKDFHMACSHA256_AES128GCM.ascii \
        # --out testdata/ecies_private_keyset2.bin --out-format BINARY
        "ecies_private_keyset2.bin",

        # tinkey create-public-keyset --in testdata/ecies_private_keyset.bin --in-form BINARY \
        # --out testdata/ecies_public_keyset.bin --out-form BINARY
        "ecies_public_keyset.bin",
        "ecies_public_keyset2.bin",
    ],
)

filegroup(
    name = "wycheproof",
    testonly = 1,
    srcs = glob([
        "wycheproof/*.*",
    ]),
)
