load("@tink_java//tools:gen_maven_jar_rules.bzl", "gen_maven_jar_rules")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

gen_maven_jar_rules(
    name = "maven",
    doctitle = "Tink Cryptography API for Google Mobile Rewarded Video Ads SSV",
    root_packages = ["com.google.crypto.tink.apps.rewardedads"],
    deps = ["//rewardedads/src/main/java/com/google/crypto/tink/apps/rewardedads:rewarded_ads_verifier"],
)
