load("@tink_java//tools:gen_maven_jar_rules.bzl", "gen_maven_jar_rules")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

gen_maven_jar_rules(
    name = "maven",
    doctitle = "Tink Cryptography API for Message Encryption for Web Push (RFC 8291)",
    manifest_lines = [
        "Automatic-Module-Name: com.google.crypto.tink.apps.webpush",
    ],
    root_packages = ["com.google.crypto.tink.apps.webpush"],
    deps = [
        "//webpush/src/main/java/com/google/crypto/tink/apps/webpush:web_push_constants",
        "//webpush/src/main/java/com/google/crypto/tink/apps/webpush:web_push_hybrid_decrypt",
        "//webpush/src/main/java/com/google/crypto/tink/apps/webpush:web_push_hybrid_encrypt",
        "//webpush/src/main/java/com/google/crypto/tink/apps/webpush:web_push_util",
    ],
)
